...

            <!-- Event Name -->



            <ImageButton
                android:id="@+id/img_event_poster"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image"
                app:layout_constraintBottom_toTopOf="@+id/info_container"
                app:layout_constraintStart_toStartOf="parent"
...
            <TextView
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:text="Event Name *:"
                android:textColor="@color/purpleText"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/et_event_name" />

            <EditText
                android:id="@+id/et_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purpleText"
...
            <TextView
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:text="Event Description *:"
                android:textColor="@color/purpleText"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/et_event_description" />



            <EditText
                android:id="@+id/et_event_description"
                android:layout_width="match_parent"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Event Tags (comma separate) *:"
                android:textColor="@color/purpleText"
                android:textStyle="bold"
                android:gravity="top"
                app:layout_constraintBottom_toTopOf="@+id/et_event_tag" />



            <EditText
                android:id="@+id/et_event_tag"
                android:layout_width="match_parent"
...

                <Space
                    android:layout_width="12dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/btn_create_event"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Create"
                    android:backgroundTint="@color/purpleText"
                    android:textColor="@color/darkPurple" />
...
