...
            android:drawableTop="@drawable/ic_notification"
            android:drawablePadding="6dp"
            android:drawableTint="@color/purpleText"
            android:padding="8dp" />

        <Button
            android:id="@+id/btn_events"
            android:layout_width="2dp"
            android:layout_height="58dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_events"
...
            android:drawableTop="@drawable/ic_scan"
            android:drawablePadding="6dp"
            android:drawableTint="@color/purpleText"
            android:padding="8dp" />

        <Button
            android:id="@+id/btn_addEvent"
            android:layout_width="2dp"
            android:layout_height="58dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_addevents"
...
